[package]
name = "qcbox"
version = "0.1.0"
authors = ["TakuKitamura <takukitamura.io@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
num-complex = "0.3"

[[bin]]
name = "qcbox"
path = "main.rs"
