[package]
authors = ["TakuKitamura <takukitamura.io@gmail.com>"]
edition = "2018"
name = "qcbox"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-complex = "0.3"
rand = "0.7.3"

[[bin]]
name = "qcbox"
path = "src/main.rs"
